welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: not found: value num
  val b=(c%nums.length)/num.length
                        ^